# EgoErrorVQA

./: README.md  dockerfile  main.py  pyproject.toml
data/json/: assembly101_answers.json  assembly101_qa_pairs_updated.json  captaincook4d_answer.json  captaincook4d_qa_pairs_updated.json  egooops_answer.json  egooops_qa_pair.json  epic_tent_answer_sec.json  epic_tent_qa_pair.json  procedure.json
src/: __init__.py  launcher.py
src/green_agent/: __init__.py  agent.py  egoerrorvqa_green_agent.toml
src/my_util/: __init__.py  my_a2a.py
src/white_agent/: __init__.py  agent.py  agent_vinci.py
